--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "angular-tslint-rules": "~1.12.1",
     "codelyzer": "~4.5.0",
     "core-js": "~2.6.1",
+    "cz-conventional-changelog": "^3.0.2",
     "husky": "~1.3.0",
     "jest": "~23.6.0",
     "jest-junit-reporter": "~1.1.0",
     "jest-preset-angular": "~6.0.2",
-    "lerna": "^2.11.0",
-    "lerna-semantic-release": "^9.1.0",
+    "lerna": "^3.19.0",
     "lint-staged": "~8.1.0",
     "lodash": "~4.17.11",
     "ng-packagr": "^5.7.1",
@@ -102,5 +102,10 @@
       "packages/@ngx-config/http-loader/src/**.ts",
       "packages/@ngx-config/merge-loader/src/**.ts"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
