--- a/packages/@ngx-config/core/package.json
+++ b/packages/@ngx-config/core/package.json
@@ -26,14 +26,15 @@
   },
   "homepage": "https://github.com/fulls1z3/ngx-config/tree/master/packages/@ngx-config/core#readme",
   "dependencies": {
-    "tslib": "~1.9.0"
+    "tslib": "~1.10.0"
   },
   "peerDependencies": {
-    "@angular/common": ">=7.0.0 <8.0.0",
-    "@angular/core": ">=7.0.0 <8.0.0",
-    "@angular/platform-browser-dynamic": ">=7.0.0 <8.0.0"
+    "@angular/common": ">=8.0.0 <9.0.0",
+    "@angular/core": ">=8.0.0 <9.0.0",
+    "@angular/platform-browser-dynamic": ">=8.0.0 <9.0.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "../../../dist/@ngx-config/core"
   }
 }
