--- a/packages/@ngx-config/http-loader/package.json
+++ b/packages/@ngx-config/http-loader/package.json
@@ -24,13 +24,17 @@
   },
   "homepage": "https://github.com/fulls1z3/ngx-config/tree/master/packages/@ngx-config/http-loader#readme",
   "dependencies": {
-    "tslib": "~1.9.0"
+    "tslib": "~1.10.0"
   },
   "peerDependencies": {
-    "@angular/common": ">=7.0.0 <8.0.0",
-    "@angular/core": ">=7.0.0 <8.0.0",
-    "@angular/platform-browser-dynamic": ">=7.0.0 <8.0.0",
+    "@angular/common": ">=8.0.0 <9.0.0",
+    "@angular/core": ">=8.0.0 <9.0.0",
+    "@angular/platform-browser-dynamic": ">=8.0.0 <9.0.0",
     "rxjs": ">=6.0.0",
-    "@ngx-config/core": ">=7.0.0 <8.0.0"
+    "@ngx-config/core": ">=7.0.0 <8.0.08.0.0 <9.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "directory": "../../../dist/@ngx-config/http-loader"
   }
 }
