--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "packages": ["packages/@ngx-config/*"],
-  "version": "7.0.0",
+  "packages": [
+    "packages/@ngx-config/*"
+  ],
+  "version": "8.0.0",
   "npmClient": "yarn",
   "command": {
     "publish": {
