--- a/packages/@ngx-config/http-loader/package.json
+++ b/packages/@ngx-config/http-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/http-loader",
-  "version": "0.0.0",
+  "version": "8.0.0",
   "description": "Loader for ngx-config that provides application settings using http",
   "repository": {
     "type": "git",
@@ -30,8 +30,8 @@
     "@angular/common": ">=8.0.0 <9.0.0",
     "@angular/core": ">=8.0.0 <9.0.0",
     "@angular/platform-browser-dynamic": ">=8.0.0 <9.0.0",
-    "rxjs": ">=6.0.0",
-    "@ngx-config/core": ">=7.0.0 <8.0.08.0.0 <9.0.0"
+    "@ngx-config/core": ">=7.0.0 <8.0.08.0.0 <9.0.0",
+    "rxjs": ">=6.0.0"
   },
   "publishConfig": {
     "access": "public",
