--- a/packages/@ngx-config/merge-loader/package.json
+++ b/packages/@ngx-config/merge-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-config/merge-loader",
-  "version": "0.0.0",
+  "version": "8.0.0",
   "description": "Loader for ngx-config that provides application settings by executing loaders in parallel and in series",
   "repository": {
     "type": "git",
@@ -31,9 +31,9 @@
   "peerDependencies": {
     "@angular/core": ">=8.0.0 <9.0.0",
     "@angular/platform-browser-dynamic": ">=8.0.0 <9.0.0",
-    "rxjs": ">=6.0.0",
+    "@ngx-config/core": ">=8.0.0 <9.0.0",
     "lodash": ">=4.17.10",
-    "@ngx-config/core": ">=8.0.0 <9.0.0"
+    "rxjs": ">=6.0.0"
   },
   "publishConfig": {
     "access": "public",
