--- a/packages/@ngx-config/http-loader/package.json
+++ b/packages/@ngx-config/http-loader/package.json
@@ -30,7 +30,7 @@
     "@angular/common": ">=8.0.0 <9.0.0",
     "@angular/core": ">=8.0.0 <9.0.0",
     "@angular/platform-browser-dynamic": ">=8.0.0 <9.0.0",
-    "@ngx-config/core": ">=7.0.0 <8.0.08.0.0 <9.0.0",
+    "@ngx-config/core": ">=8.0.0 <9.0.0",
     "rxjs": ">=6.0.0"
   },
   "publishConfig": {
