--- a/packages/@ngx-config/http-loader/package.json
+++ b/packages/@ngx-config/http-loader/package.json
@@ -4,7 +4,7 @@
   "description": "Loader for ngx-config that provides application settings using http",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fulls1z3/ngx-config.git"
+    "url": "https://github.com/fulls1z3/ngx-config"
   },
   "keywords": [
     "plugin",
@@ -30,7 +30,7 @@
     "@angular/common": ">=8.0.0 <9.0.0",
     "@angular/core": ">=8.0.0 <9.0.0",
     "@angular/platform-browser-dynamic": ">=8.0.0 <9.0.0",
-    "@ngx-config/core": ">=7.0.0 <8.0.08.0.0 <9.0.0",
+    "@ngx-config/core": ">=8.0.0 <9.0.0",
     "rxjs": ">=6.0.0"
   },
   "publishConfig": {
