--- a/packages/@ngx-config/core/package.json
+++ b/packages/@ngx-config/core/package.json
@@ -4,7 +4,7 @@
   "description": "Configuration utility for Angular",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fulls1z3/ngx-config"
+    "url": "https://github.com/fulls1z3/ngx-config.git"
   },
   "keywords": [
     "app initializer",
